--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/* //Css Code  */
+
 * {
   padding: 0;
   margin: 0;
@@ -182,6 +184,9 @@ button {
   position: fixed;
   top: 0;
 }
+
+
+/* //Responsive done  */
 
 @media only screen and (max-width: 700px) {
   .box-container {
